--- a/MyFirstApplication/Base.lproj/Main.storyboard
+++ b/MyFirstApplication/Base.lproj/Main.storyboard
@@ -12,8 +12,8 @@
         <scene sceneID="trr-Nb-fsh">
             <objects>
                 <navigationController id="Brd-D6-c81" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VEU-Bf-cpS">
-                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                    <navigationBar key="navigationBar" opaque="NO" contentMode="scaleToFill" largeTitles="YES" id="VEU-Bf-cpS">
+                        <rect key="frame" x="0.0" y="44" width="390" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -69,24 +69,36 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="EA8-Il-yHe" firstAttribute="leading" secondItem="gvx-Y4-rO6" secondAttribute="leading" id="2LC-nA-pae"/>
-                            <constraint firstItem="EA8-Il-yHe" firstAttribute="top" secondItem="gvx-Y4-rO6" secondAttribute="top" id="QU3-6H-cSp"/>
+                            <constraint firstItem="EA8-Il-yHe" firstAttribute="top" secondItem="gvx-Y4-rO6" secondAttribute="top" id="HyY-sq-xf4"/>
                             <constraint firstItem="gvx-Y4-rO6" firstAttribute="bottom" secondItem="EA8-Il-yHe" secondAttribute="bottom" id="qV4-n5-qmV"/>
                             <constraint firstItem="gvx-Y4-rO6" firstAttribute="trailing" secondItem="EA8-Il-yHe" secondAttribute="trailing" id="tlC-D2-aSM"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="urg-Kd-e8O">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="bookmark.circle" catalog="system" id="pRK-gB-uoX"/>
+                        <nil key="title"/>
+                        <textField key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Filter by title" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="3NB-di-rfX">
+                            <rect key="frame" x="80.666666666666686" y="5" width="229" height="34"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
+                        </textField>
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="bookmark.circle" catalog="system" id="pRK-gB-uoX">
+                            <connections>
+                                <action selector="savedPostsButton:" destination="UHl-Au-OZa" id="odH-mJ-ePM"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="navigationArea" destination="urg-Kd-e8O" id="76A-5I-X9m"/>
                         <outlet property="savedPostsButton" destination="pRK-gB-uoX" id="QYq-qa-R2b"/>
                         <outlet property="tableView" destination="EA8-Il-yHe" id="lXP-6S-JlD"/>
+                        <outlet property="textField" destination="3NB-di-rfX" id="q6a-nP-KGc"/>
                         <segue destination="syf-Kz-qWA" kind="show" identifier="post_details" id="yqf-Zp-L1x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t40-aM-09R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="125" y="94"/>
+            <point key="canvasLocation" x="124.61538461538461" y="93.838862559241704"/>
         </scene>
         <!--Post Details View Controller-->
         <scene sceneID="fFM-IO-5gg">
@@ -97,7 +109,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H5i-Lh-VzR" customClass="PostView" customModule="MyFirstApplication" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88" width="390" height="300"/>
+                                <rect key="frame" x="0.0" y="140" width="390" height="300"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="GxS-NB-Yak"/>
